tests/unit/fake_data_root/openstack/sos_commands/networking/ip_netns_exec_fip-32981f34-497a-4fae-914a-8576055c8d0d_iptables-save
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*raw
:PREROUTING ACCEPT [493:51002]
:OUTPUT ACCEPT [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-l3-agent-PREROUTING -j CT --notrack
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*nat
:PREROUTING ACCEPT [0:0]
:INPUT ACCEPT [0:0]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-float-snat - [0:0]
:neutron-l3-agent-snat - [0:0]
:neutron-postrouting-bottom - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A POSTROUTING -j neutron-postrouting-bottom
-A neutron-l3-agent-snat -j neutron-l3-agent-float-snat
-A neutron-postrouting-bottom -m comment --comment "Perform source NAT on outgoing traffic." -j neutron-l3-agent-snat
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*mangle
:PREROUTING ACCEPT [493:51002]
:INPUT ACCEPT [4:1208]
:FORWARD ACCEPT [465:43718]
:OUTPUT ACCEPT [0:0]
:POSTROUTING ACCEPT [465:43718]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-POSTROUTING - [0:0]
:neutron-l3-agent-PREROUTING - [0:0]
:neutron-l3-agent-mark - [0:0]
-A PREROUTING -j neutron-l3-agent-PREROUTING
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A POSTROUTING -j neutron-l3-agent-POSTROUTING
-A neutron-l3-agent-PREROUTING -j neutron-l3-agent-mark
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
# Generated by iptables-save v1.8.4 on Thu Feb 10 16:19:43 2022
*filter
:INPUT ACCEPT [4:1208]
:FORWARD ACCEPT [465:43718]
:OUTPUT ACCEPT [0:0]
:neutron-filter-top - [0:0]
:neutron-l3-agent-FORWARD - [0:0]
:neutron-l3-agent-INPUT - [0:0]
:neutron-l3-agent-OUTPUT - [0:0]
:neutron-l3-agent-local - [0:0]
-A INPUT -j neutron-l3-agent-INPUT
-A FORWARD -j neutron-filter-top
-A FORWARD -j neutron-l3-agent-FORWARD
-A OUTPUT -j neutron-filter-top
-A OUTPUT -j neutron-l3-agent-OUTPUT
-A neutron-filter-top -j neutron-l3-agent-local
COMMIT
# Completed on Thu Feb 10 16:19:43 2022
